bug/conf: add more room so toolbar doesn't overlap. fixes #8.

--- a/server/web/app.sass
+++ b/server/web/app.sass
@@ -48,7 +48,7 @@ body
   padding: 1em
 
 #main
-  padding: 0 1em 4em
+  padding: 0 1em 8em
   transition: 0.2s opacity
 
 #toolbar
